MDL-69197 themes: Restore nowrap for .btn to avoid two liners.

--- a/theme/boost/style/moodle.css
+++ b/theme/boost/style/moodle.css
@@ -4123,6 +4123,7 @@ textarea.form-control {
   font-weight: 400;
   color: #212529;
   text-align: center;
+  white-space: nowrap;
   vertical-align: middle;
   user-select: none;
   background-color: transparent;
